--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/node-logger": "6.4.18",
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "6.4.18",
-    "html-webpack-plugin": "^5.5.0"
+    "html-webpack-plugin": "^5.5.0",
+    "prettier": "2.7.1"
   }
 }
